src/styles/scss/_global.scss
//
//

$fonts: -apple-system, system-ui, Ubuntu, Roboto, 'Open Sans', 'Segoe UI', 'Helvetica Neue';

$purewhite: white;
$pureblack: black;

$blue: #007aff;
$green: #2ed058;
$red: #fe3b31;
$settingsGrey: #f2f2f7;
$inputGrey: #eaeaee;
$focusedGrey: #dadade;
$borderGrey: #c8c7cc;
$placeholderGrey: #7c7d7e;
$greyish: #3a3a3a;
$blackish: #222;

$inputHeight: 2.35em;
$settingsMargin: 0.65em;

$thumbShadow: 0px 1px 3px 2px rgba(20, 20, 20, 0.12);

$textShadow: 0 1px 5px rgba(0, 0, 0, 0.2);
$easeOutThree: cubic-bezier(0.215, 0.61, 0.355, 1);

:root {
	--app-height: 100vh;
}

body {
	margin: 0;
	cursor: default;
	user-select: none;
	-moz-user-select: none;
	-webkit-user-select: none;
	touch-action: pan-y;
	opacity: 1;
	background-color: $pureblack;
	color: $purewhite;
	font-family: $fonts;
	font-size: 1em;
	max-height: var(--app-height);
	text-align: center;
	overflow: hidden;
	padding: env(safe-area-inset-top) env(safe-area-inset-right) env(safe-area-inset-bottom) env(safe-area-inset-left);

	p,
	h3 {
		margin: 0;
	}

	hr {
		border: none;
		border-bottom: 1px solid $borderGrey;
		margin: $settingsMargin 0;
		display: block;
	}

	select {
		cursor: pointer;
	}

	a,
	input,
	textarea,
	select,
	button {
		outline: none;
	}

	&.tabbing {
		a:focus,
		input:focus,
		textarea:focus,
		select:focus,
		button:focus {
			outline: auto;
		}
	}
}

@mixin animHide() {
	@keyframes animHide {
		0% {
			opacity: 1;
		}
		100% {
			opacity: 0;
		}
	}
}

@mixin hidden {
	&.hidden {
		display: none;
		cursor: default;
		opacity: 0;
		transition: opacity 0.1s;
	}
}

@mixin allCentered {
	display: flex;
	align-items: center;
	justify-content: center;
}

@mixin marginSettings {
	margin-left: 21px;
	margin-right: 21px;
}

@mixin radiusSettings {
	border-radius: 10px;
}

@mixin frostedGlass($tint: 255, $alpha: 0.4, $blur: 10px, $fbTint: 251, $fbAlpha: 0.8, $fbColor: #222) {
	@supports (backdrop-filter: none) or (-webkit-backdrop-filter: none) {
		backdrop-filter: blur($blur);
		-webkit-backdrop-filter: blur($blur);
		background: rgba($tint, $tint, $tint, $alpha);
	}

	// fb: fallback
	@supports not ((backdrop-filter: none) or (-webkit-backdrop-filter: none)) {
		background: rgba($fbTint, $fbTint, $fbTint, $fbAlpha);
		color: $fbColor;
	}

	@-moz-document url-prefix() {
		background: rgba($fbTint, $fbTint, $fbTint, $fbAlpha);
		color: $fbColor;
	}
}

@mixin hideElements {
	#interface {
		//
		&.init {
			#main,
			#linkblocks,
			#sb_container,
			#searchbar,
			#time,
			#time-container,
			#date,
			#description,
			#greetings,
			#widget,
			#forecast,
			#current,
			#linkblocks.withQuotes,
			#quotes_container.shown,
			#quotes_container.shown #quote,
			#quotes_container.shown #author {
				transition: none;
			}
		}

		#main,
		#time,
		#sb_container,
		#linkblocks {
			flex-grow: 1;
			transition: transform 0.4s, opacity 0.2s, flex-grow 0.4s 0.2s;
			// will-change: transform, flex-grow;
		}

		#time-container,
		#date,
		#description,
		#greetings,
		#widget {
			transition: opacity 0.4s;
		}

		// Parent blocks shrinks & hide
		#main.he_hidden,
		#linkblocks.he_hidden,
		#time.he_hidden {
			flex-grow: 0 !important;
			opacity: 0;
		}

		// Children only hide
		#time-container.he_hidden,
		#date.he_hidden,
		#description.he_hidden,
		#greetings.he_hidden,
		#widget.he_hidden {
			opacity: 0;
		}
	}
}

@mixin allSettings {
	.as {
		max-height: 0;
		overflow: hidden;
		transition: max-height 0.4s;
	}

	/* prettier-ignore */
	&.all {
		.as_link {max-height: 120px}
		.as_collection {max-height: 130px}
		.as_visuals {max-height: 327px}
		.as_timedate {max-height: 260px}
		.as_sbopacity {max-height: 60px}
		.as_forecast {max-height: 60px}
		.as_temp {max-height: 60px}
		.as_fonts {max-height: 300px}
		.as_css {max-height: 3100px}
		.as_impexp {max-height: 220px}
		.as_quote_type {max-height: 130px}
	}

	&.init {
		.as {
			transition: max-height 0s;
		}
	}
}

@mixin settingsBase {
	//
	// Dark mode transition
	// #settings and buttons have seperate transitions
	#i_refresh,
	#cssEditor,
	.tooltip,
	.param,
	select,
	input,
	hr {
		transition-duration: 0.4s;
		transition-timing-function: $easeOutThree;
		transition-property: background-color, color, border, border-color, transform;
	}

	input:focus-visible + .slider {
		border: 3px solid #007aff44;
	}

	#i_export,
	#i_refresh,
	#i_qtrefresh,
	#cssEditor,
	input[type='text'],
	input[type='range'],
	select {
		font-size: 13px;
		font-family: $fonts;
	}

	#i_refresh,
	#i_qtrefresh,
	select {
		height: $inputHeight;
		border-radius: 8.5px;
		padding-left: 10px;
		border: 1px solid $inputGrey;
		color: $blackish;
		-webkit-appearance: none;
	}

	input[type='text'] {
		width: 155px;
	}

	input[type='range'],
	select {
		width: 155px;
	}

	.slider,
	input:checked + .slider {
		transition: background-color 0.1s;
	}

	input:active,
	input:focus,
	a:hover,
	a:active,
	a:focus {
		border: 0;
	}

	input::placeholder {
		color: $placeholderGrey;
		opacity: 1;
	}

	input::-moz-focus-outer {
		border: 0;
	}

	input[type='text'],
	input[type='url'],
	#i_export {
		padding-left: 10px;
		border-radius: 8.5px;
		border: 0;
		color: $blackish;
		background-color: $inputGrey;
	}

	input[type='text']:focus,
	input[type='url']:focus {
		background-color: $focusedGrey;
	}

	button {
		border: 0;
		background-color: #fff;
		color: $blue;
		cursor: pointer;
		font-size: 14px;
	}

	input, select, #i_export {
		box-sizing: border-box;
		height: $inputHeight;
	}

	select {
		background-color: $inputGrey;
	}

	/* Switch */
	.switch {
		position: relative;
		display: inline-block;
		width: 51px;
		height: 31px;
		margin-left: 1em;

		input {
			opacity: 0;
			width: 0;
			height: 0;
		}

		input:checked + .slider {
			background-color: $green;
		}

		input:checked + .slider:before {
			transform: translateX(20px);
		}

		.slider {
			position: absolute;
			cursor: pointer;
			top: 0;
			left: 0;
			right: 0;
			bottom: 0;
			background-color: $inputGrey;
			-webkit-transition: 0.15s;
			transition: 0.15s;
			border-radius: 34px;

			&:before {
				position: absolute;
				content: '';
				height: 27px;
				width: 27px;
				top: 2px;
				left: 2px;
				// bottom: 3px;
				background-color: $purewhite;
				-webkit-transition: 0.3s;
				transition: 0.3s;
				border-radius: 50%;
				box-shadow: $thumbShadow;
			}

			&:hover {
				background: #ccc;
				transition: background-color 0.2s;
			}
		}
	}

	/* Slider */
	input[type='range'] {
		-webkit-appearance: none;
		position: relative;
		height: 2px;
		cursor: pointer;
		background-color: $focusedGrey;
		border-radius: 1.5rem;
		opacity: 1;
		cursor: grab;
		margin: 0;

		&:active {
			cursor: grabbing;
		}

		/* Firefox */
		&::-moz-range-track {
			height: 2px;
			border-radius: 50px;
			background: $focusedGrey;
		}

		&::-moz-range-progress {
			background-color: $borderGrey;
		}

		&::-moz-range-thumb {
			background: #fff;
			height: 20px;
			width: 20px;
			border-radius: 50px;
			border: 0;

			box-shadow: $thumbShadow;
		}
	}

	/* Chrome, Opera & Safari */
	input[type='range']::-webkit-slider-thumb {
		-webkit-appearance: none;
		background: #fff;
		height: 20px;
		width: 20px;
		border-radius: 50px;
		border: 0;
		box-shadow: $thumbShadow;
	}

	input[type='range']::-ms-thumb {
		margin: 0; /* Resets margin in Edge since it supports -webkit-slider-thumb as well */
	}

	/*Edge*/
	&::-ms-fill-lower {
		background: dodgerblue;
	}

	&::-ms-thumb {
		background: #fff;
		border: 2px solid #999;
		height: 40px;
		width: 20px;
		box-sizing: border-box;
	}

	&::-ms-ticks-after {
		display: none;
	}

	&::-ms-ticks-before {
		display: none;
	}

	&::-ms-track {
		background: #ddd;
		color: transparent;
		height: 40px;
		border: none;
	}

	&::-ms-tooltip {
		display: none;
	}

	/* total width */
	&::-webkit-scrollbar {
		width: 15px;
	}

	&::-webkit-scrollbar-track {
		box-shadow: inset 0 0 15px 15px transparent;
		border: solid 3px transparent;
	}

	&::-webkit-scrollbar-thumb {
		box-shadow: inset 0 0 15px 15px $borderGrey;
		border: solid 3px transparent;
		border-radius: 15px;
	}
}

